--- a/ur5e_robotiq_85_moveit_config/package.xml
+++ b/ur5e_robotiq_85_moveit_config/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
 
-  <name>ur5e_moveit_config</name>
+  <name>ur5e_robotiq_85_moveit_config</name>
   <version>1.3.1</version>
   <description>
      An automatically generated package with all the configuration and launch files for using the ur5e with the MoveIt Motion Planning Framework
@@ -10,7 +10,7 @@
   <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
   <maintainer email="miguel.prada@tecnalia.com">Miguel Prada Sarasola</maintainer>
   <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
-  
+
   <license>BSD</license>
 
   <url type="website">http://moveit.ros.org/</url>
