--- a/ur5e_robotiq_85_moveit_config/package.xml
+++ b/ur5e_robotiq_85_moveit_config/package.xml
@@ -6,12 +6,10 @@
   <description>
      An automatically generated package with all the configuration and launch files for using the ur5e with the MoveIt Motion Planning Framework
   </description>
-  <author>Felix Messmer</author>
-  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
-  <maintainer email="miguel.prada@tecnalia.com">Miguel Prada Sarasola</maintainer>
-  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
 
-  <license>BSD</license>
+  <maintainer email="leander@blackcoffeerobotics.com">leander</maintainer>
+
+  <license>MIT</license>
 
   <url type="website">http://moveit.ros.org/</url>
   <url type="bugtracker">https://github.com/ros-planning/moveit_setup_assistant/issues</url>
