beautifully arranged vars

--- a/ur5e_robotiq_85_moveit_config/config/fake_controllers.yaml
+++ b/ur5e_robotiq_85_moveit_config/config/fake_controllers.yaml
@@ -12,4 +12,4 @@ controller_list:
       - $(arg prefix)finger_joint
 initial:  # Define initial robot poses.
   - group: manipulator
-    pose: up
+    pose: custom
