--- a/ur5e_robotiq_85_mtc_pkg/config/mtc/mtc.yaml
+++ b/ur5e_robotiq_85_mtc_pkg/config/mtc/mtc.yaml
@@ -29,6 +29,8 @@ free_constraint_path: config/constraints/constraint_approximations_database_od_n
 
 # Gripper parameters
 gripper_cmd_topic: robotiq_2f_85_gripper_controller/gripper_cmd/goal
+gripper_open_position: 0.0
+gripper_closed_position: 0.8
 gripper_touch_links:
   - left_outer_knuckle
   - left_inner_knuckle
@@ -39,3 +41,4 @@ gripper_touch_links:
   - robotiq_arg2f_base_link
   - left_inner_finger_pad
   - right_inner_finger_pad
+
