Constraints only left

--- a/ur5e_robotiq_85_mtc_pkg/config/mtc/pick_and_place.yaml
+++ b/ur5e_robotiq_85_mtc_pkg/config/mtc/pick_and_place.yaml
@@ -8,7 +8,7 @@ object_name: coke_can
 planning_scene_objects:
   - name: coke_can
     link_state: coke_can::link
-    dimensions: [0.16, 0.035]
+    dimensions: [0.159, 0.035]
     origin_compensation: [0., 0., 0.]
 
   - name: table
@@ -21,24 +21,24 @@ place_offset: [0.0, 0.0, 0.0]
 
 # Offset from the center
 object_center_offset: 0.0
-object_center_offset_axis: y-axis
+object_center_offset_axis: -y
 
 # Approach object range offsets
 approach_object_min_dist: 0.05
 approach_object_max_dist: 0.4
-approach_axis: z-axis
+approach_axis: +z
 
 # Valid distance range when lifting an object after pick
 lift_object_min_dist: 0.2
 lift_object_max_dist: 0.4
-lift_axis: x-axis
+lift_axis: -y
 
 # Valid distance range when dropping an object
 drop_object_min_dist: 0.05
 drop_object_max_dist: 0.4
-drop_axis: x-axis
+drop_axis: -y
 
 # Retreat after place
 retreat_object_min_dist: 0.05
 retreat_object_max_dist: 0.25
-retreat_axis: z-axis
+retreat_axis: -z
