Removed coke can, added beer

--- a/ur5e_robotiq_85_mtc_pkg/config/models/beer/model.config
+++ b/ur5e_robotiq_85_mtc_pkg/config/models/beer/model.config
@@ -1,16 +1,15 @@
 <?xml version="1.0"?>
 
 <model>
-  <name>Coke Can</name>
+  <name>Beer</name>
   <version>1.0</version>
   <sdf version="1.5">model.sdf</sdf>
 
   <author>
-    <name>John Hsu</name>
-    <email>hsu@osrfoundation.org</email>
+    <name>Maurice Fallon</name>
   </author>
 
   <description>
-    A can of Coke.
+    Beer
   </description>
 </model>
